Bumped version to 2.0.0, not because it was such a big break, even tough some dependent plugins may be broken; but to better differentiate to versions pre this new versioning system.
Switched from Location to our own Location clone, because the world of locations can unload at any time. And since it is mutable, it can lead to errors very fast.

Adapted to Block/ItemType and away from Material since it represents nms way better and is already the server internal base for everything Material related

Adapted to Configurate. This new Config system is way more flexible than the Bukkit system and will allow us to create better DataFixerUppers in the Future.
Also, it already simplified how config is saved and has potential to do way more!
Also, it makes config loading a bit more secure, since it can throw Exceptions left, right and centre; and therefore we DO get to know when the config breaks instead of being mostly silent and overwriting every broken state as it was.
Keen eyes might notice I didn't chaned the main config.yml yet.
It was convinient not to deal with resouces and defaults, but I plan to be consequent in the future.

Switched away from io and adapted to nio. Just because it is the "new" way to handle Files.

Deserialize ItemStacks as bytes

Yeeted the RegionMapFlag. It would be nice if in future we could solve the now ugly consequence of Region lookup by iteration

removed the unused config lookup in the MinigameManger, since it told you the lie it would hold the only instance of this config - and it was not.

renamed some stuff to stay in line with conventions (ActionInterface -> IAction; GameMechanicBase -> AGameMechanic)

removed Node/Region executors. They never did anything different. But removing them meant easier abstraction when dealing with configs.